--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,17 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+
+        // Room schema 导出配置
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                    "room.schemaLocation": "$projectDir/schemas".toString(),
+                    "room.incremental": "true",
+                    "room.expandProjection": "true"
+                ]
+            }
+        }
     }
 
     buildTypes {
@@ -41,6 +52,12 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    
+    // Navigation 组件
+    def nav_version = "2.5.3"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
     
     // Room components
     def room_version = "2.5.0"
@@ -55,4 +72,16 @@ dependencies {
     // WorkManager
     def work_version = "2.8.1"
     implementation "androidx.work:work-runtime:$work_version"
+
+    // 单元测试依赖
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation 'org.robolectric:robolectric:4.9'
+
+    // 安卓测试依赖
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
+    androidTestImplementation 'androidx.room:room-testing:2.5.2'
 } 
